@startuml
'https://plantuml.com/class-diagram

hide methods

rectangle "Job Opening" #bbccaa {

    class JobOpening<<Aggregate Root>><<Entity>>{}

    class JobReference<<Identity>><<Value Object>>{}

    class TitleOrFunction<<Value Object>>{}

    enum ContractType<<Enumerated>><<Value Object>>{
        FULL_TIME
        PART_TIME
    }

    enum Mode<<Enumerated>><<Value Object>>{
        REMOTE
        ON-SITE
        HYBRID
        }


    class VacanciesNumber<<Value Object>>{}

    class Description<<Value Object>>{}

}


rectangle "Job Opening Application" #aaccbb {

    class Application<<Aggregate Root>><<Entity>>{}

    class ApplicationId<<Identity>><<Value Object>>{}

    class AttachedEmail<<Value Object>>{}

    class AttachedFile<<Value Object>>{}

    class ApplicatorData<<Value Object>>{}

    class ApplicationStatus<<Value Object>>{}

    class ApplicationRank<<Value Object>>{}

}

rectangle " Notification " #ccbbcc {

    class Notification<<Aggregate Root>><<Entity>>{}
    class idNotification<<Identity>><<Value Object>>{}
    class userName<<Value Object>>{}
    class content<<Value Object>>{}
    class isSend<<Value Object>>{}

}



rectangle "Job Opening Process" #ccbbcc{
    class JobOpeningProcess<<Aggregate Root>><<Entity>>{}
    class JobOpeningProcessId<<Identity>><<Value Object>>{}
'    class JobOpeningProcessStatus<<Value Object>>{}
'    class JobOpeningProcessStage<<Value Object>>{}
    class Phase<<Entity>>{
        }
    enum PhaseType<<Enumerated>><<Value Object>>{
        APPLICATION
        SCREENING
        INTERVIEWS
        ANALYSIS
        RESULT
    }
}



rectangle customer #bbaacc{
    class Customer <<Aggregate Root>><<Entity>>{}
    class CustomerId<<Identity>><<Value Object>>{}
}


rectangle "Shared Objects" {

    class Email <<Value Object>>
    class Username <<Value Object>>
    class Address <<Value Object>>
    class Name<<Value Object>>{}

}



rectangle "User" #ccbbcc {
    class SystemUser <<Aggregate Root>><<Entity>>{}
    class Password<<Value Object>>{}
    class BaseRole<<Value Object>>{}

    SystemUser "1" --> "1" Email: has
    SystemUser "1" --> "1" Username: has
    SystemUser "1" -up> "1" Password
    SystemUser "1" --> "1" Name
    SystemUser "1" -> "1" BaseRole
    Customer "1" --|> "1" SystemUser

}

'
'rectangle "Job Opening Interview" #ccbbaa {
'    class JobInterview <<Aggregate Root>><<Entity>>{}
'    class JobInterviewId<<Identity>><<Value Object>>{}
'    class InterviewDate<<Value Object>>{}
'    class InterviewTime<<Value Object>>{}
'    class Score<<Value Object>>{}
'    class InterviewResult<<Value Object>>{}
'}

'
'JobInterview "1" -up-> "1" JobInterviewId
'JobInterview "1" -up-> "1" InterviewDate
'JobInterview "1" --> "1" InterviewTime
'JobInterview "1" -> "1" Score
'JobInterview "1" --> "1" InterviewResult
'
'Application "1" -up-> "1" JobInterview




JobReference "1" <-up- "1" JobOpening
TitleOrFunction "1" <-up- "1" JobOpening
ContractType "1" <-- "1" JobOpening
Mode "1" <-- "1" JobOpening
Description "1" <-up- "1" JobOpening
VacanciesNumber "1" <-up- "1" JobOpening



Application "1" --> "1" ApplicationId
Application "1" --> "1" AttachedEmail
Application "1" --> "1" AttachedFile
Application "1" --> "1" ApplicatorData
Application "*" -----> "1" JobOpening : submitted for
Application "1" --> "1" ApplicationStatus
Application "1" --> "0..1" ApplicationRank
Application "1" --> "*" Notification : has

JobOpeningProcess "1" -left-> "1" JobOpeningProcessId
JobOpening "1" -----> "*" JobOpeningProcess : has
JobOpeningProcess "1" --> "1" Phase
Phase "1" --> "1" PhaseType

Notification "1" --> "1" idNotification
Notification "1" --> "1" userName
Notification "1" --> "1" content
Notification "1" --> "1" isSend

JobOpening "1" -----> "0..*" Notification : has

Customer "1" --> "1" CustomerId

JobOpening "*" -> "1" Customer : set by
JobOpening "1" --> Address



@enduml